# CrabbySoccer

./: .gitignore  README.md  soccercsvattributes.txt
crabbysoccer/: Cargo.toml  soccer.db
crabbysoccer/src/: client.rs  common.rs  lib.rs  macros.rs  main.rs  requests.rs  server.rs  tests.rs
crabbysoccer/src/database/: _useless_queries.rs  mod.rs  queries.rs
sandbox/: Cargo.toml
sandbox/src/: lib.rs  main.rs
