[package]
name = "crabbysoccer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
itertools = "0.12.1"
queue = "0.3.1"
reqwest = "0.12.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
strum = { version = "0.26.2", features=["derive"]}
